--- a/_posts/2022-12-01-first.md
+++ b/_posts/2022-12-01-first.md
@@ -1,12 +1,17 @@
+---
+layout: single
+title: "포트폴리오 블로그입니다"
+categories: 코딩
+---
+
+# 제목
 
 
 
 
 
-
-
-
-```java
+```
+java
 public static 
 ```
 
